[gd_scene load_steps=2 format=3 uid="uid://bdgu5muwrbw0h"]

[ext_resource type="Script" path="res://Scenes/UI/mini_map_panel.gd" id="1_nhtu4"]

[node name="MiniMapPanel" type="MarginContainer"]
anchors_preset = -1
anchor_left = 0.0166667
anchor_top = 0.0296296
anchor_right = 0.310417
anchor_bottom = 0.450926
script = ExtResource("1_nhtu4")
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Role" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Role"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Role/MarginContainer"]
layout_mode = 2

[node name="RoleLabel" type="Label" parent="VBoxContainer/Role/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "*Role*"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Role/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Ranks" type="Label" parent="VBoxContainer/Role/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "(C/L/P)"

[node name="RankLabel" type="Label" parent="VBoxContainer/Role/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "%d  |   %d   |    %d"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/PanelContainer/MarginContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(544, 305)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Camera2" type="Camera3D" parent="VBoxContainer/PanelContainer/MarginContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.849904, 0.312841, -0.42402, 0, 0.804689, 0.593697, 0.526937, -0.504585, 0.683908, -15.1667, 21.2541, 30.6634)
current = true

[node name="Player Velocity" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Player Velocity"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VelocityLabel" type="Label" parent="VBoxContainer/Player Velocity/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "*Velocity*"
